# template-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/: codecov.yml  dependabot.yaml
.github/workflows/: checks.yaml  publish.yaml
crates/project/: Cargo.toml
crates/project/src/: lib.rs
