[workspace]
resolver = "3"
members = ["crates/project"]

[workspace.package]
edition = "2024"
authors = ["Sergey Vilgelm <sergey@vilgelm.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sv-tools/template-rs"
repository = "https://github.com/sv-tools/template-rs.git"
readme = "README.md"
keywords = ["template"]
categories = ["development-tools"]
